--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.1.2",
-    "sequelize": "^6.11.0"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0"
   }
 }
